style/home.css
/* ... */
.accordion-button.collapsed::after  {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
}
.underline-hover {
    color:rgb(98, 98, 98);
    font-weight: 800;
    text-decoration: underline;
    
}

.action-text { 
    /*background-color: black;*/
    display: inline-block;
    padding: 1%;
    background: radial-gradient( rgb(0, 0, 0),rgba(0, 0, 0, 0)); 

}

#near_galaxy_view_label{
    background-image: url("../Images/Icons/GalIcon.png"); 
    background-size:contain; 
    border: dashed 1px var(--grey);
}
.term-hover { 
    color:rgb(152, 152, 152);
    font-size: 10pt;
    display: inline-block;
    /*font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;*/
    font-weight: 400;
    text-decoration: underline;
    text-underline-position: from-font;
    /*border: 1px solid rgb(98, 98, 98);  
        margin: 1%;

    */
    cursor: pointer;
}
.hideme {
    opacity:0;
    background-color: black;
}

.term-hover:hover {
    color: white;
   /*border: 1px solid white;  */


}
.underline-hover:hover {
    color: white;
    cursor: pointer;
}

.icon-button {
    width: 50px;
}
strong {
    font-size: 12pt;
}

.light-text {
    font-size: 10pt;
    color: gray;
    font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
}
.btn-outline-light {
    border: 1px solid grey !important;
    border-radius: 0 !important;
    font-size: 10pt;
    color: grey;
    background-color: black;
}
.credit  a {
    color: grey;
}
.credit {
    font-size: 10pt;
}
.map-sidebar {
    position: sticky;
    top: 0%;
    left: 100%;
    z-index: 5;
    align-items: right;
    text-align: right;

}
/*
.banner-switch {
    font-size: large;
    background-color: black;
}
*/
.banner-switch:hover {
    background-color: black;
}


.nav-pills .nav-link.active {
    background-color:black !important;
    border: 1px solid white !important;
    color: white;
}

.btn-no-outline-light {
    border: 0px solid grey;
    border-radius: 0 !important;
    font-size: 10pt;
    color: grey;
    padding: 0px;
    background-color: black;
    text-align: left;
}

.btn-outline-light:hover {
    color: white;
    border: 1px solid white;
    background-color: black;

}
.btn-outline-light:hover, .btn-outline-light:focus, .btn-outline-light:active, .btn-outline-light.active, .open>.dropdown-toggle.btn-outline-light {
    background-color: #00b3db00 !important;
}
.btn-outline-light:hover, .btn-outline-light:focus, .btn-outline-light:active, .btn-outline-light.active, .open>.dropdown-toggle.btn-outline-light {
    background-color: #00b3db00;

    border-color: #ffffff; /*set the color you want here*/
    border: 0px;
    color: white;
    border: 1px solid white;
}

.col-3{
    position: relative;
}
.col-xs-1{
    position: relative;
}
.axis {
    width: 5%;
    padding: 0px;
}
.dropdown-menu-dark {
    background-color: black;
    border: 1px solid var(--grey);
}
.dropdown-divider {
    border-color:var(--grey)
}
.axis-label {
    display: inline-block;
    padding: 10px;
    z-index: 2;
    transform-origin: bottom; 
    background-color: black;
    font-size: 20pt;
    text-transform: uppercase;
    font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
    font-weight: 100;
    position: sticky;
    transform: rotate(-90deg);
    left: 0%;
    top: 50%;

}
/*
.right-label{
    transform: rotate(-270deg);
    right: 0px;
}
*/
.col-1{
    position: relative;
}
.banner-info-box {
    position: absolute;
    /*color: var(--grey);*/
    color: white;
    outline:  solid 1px rgba(255, 255, 255, 0);
    transition: outline 0.1s linear;
}
.banner-info-text {
    position: absolute;
    color: white;

}
.banner-info-box:hover {
}




.banner-info-box:hover {
    cursor: pointer;
    color: white;
}

.skyview_image {
    display: none;
}

.term-hover:hover ~ .explanation_image{
    background-color: red;
border: solid white 3px;

}
.banner-info-box>.term-hover:hover ~ .explanation_image{
    visibility: hidden;
    display: none;
    background-color: red;
}
.banner-info-box>.term-hover:hover ~ .skyview_image{
    visibility: visible;
    display: block;

}

.small-accordion {
    font-size: 12pt;
}

.banner-info-box-content {
}
.banner-info-box h1 {
    padding-top: 10px;
    text-decoration: underline 0.15em rgba(0, 0, 0, 0);
    text-underline-position: from-font;
    text-decoration-thickness: 1px;
    transition: text-decoration-color 300ms;  
    text-align: left;
}


.banner-info-box:hover h1{
    color: white;
    text-decoration-color: rgb(255, 255, 255);
}
/*

.banner-info-box:hover img{
    border:  solid 1px white;

}
*/
.additional {
    background-color: black;
    width: 25%;
    right: 2%;
    padding: 1%;
    transition: border-color .05s linear;
    border: 1px solid var(--grey);


}
.outer-sidebar {
    top: 0%;
    left: 0%;

}
.new-banner-sidebar {
    background-color: black;
    position: sticky;
    max-height: 100vh;
    top: 100%;
    left: 2%;
    width:fit-content;
    z-index: 5;
    padding: 1%;
    border: 1px solid var(--grey);


}

.edit {
    position: relative;
    top: auto;
    left: auto;
    height: fit-content;
    width: fit-content;
    max-height:80vh;
    display: block;
    cursor: pointer;

}
.additional:hover {
    border: 1px solid white;
}

/*
.col-lg-3 {
    flex-grow: 1;
    transition: all 400ms ease; 
}  
*/
.other-col {

}
.this-col-change{
    flex-grow: 1;
    transition: all 400ms ease; 
    
}
.col-lg-6{
    flex-shrink: 1;
    transition: all 400ms ease;
    min-width: 0 
}

.col-lg-4{
    flex-grow: 1;
    transition: all 400ms ease;

}

.col-lg-8{
    flex-shrink: 1;
    transition: all 400ms ease;

}
/* ... */

